chore: configure dependabot for mobile

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,7 @@ updates:
     directory: "/backend"
     schedule:
       interval: "daily"
+  - package-ecosystem: "gradle"
+    directory: "/mobile"
+    schedule:
+      interval: "daily"
