--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,7 +5,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "echo 'No lint configured'"
   },
   "dependencies": {
     "next": "15.2.4",
