--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ cache/
 apps/web/node_modules/
 apps/web/.next/
 
+# Uploaded files
+apps/api/uploads/*
+!apps/api/uploads/.gitkeep
+
 # NestJS
 apps/api/node_modules/
 apps/api/dist/
