--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -18,7 +18,8 @@
     "react-native": "0.72.5",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.22.0"
+    "react-native-screens": "^3.22.0",
+    "react-native-image-picker": "^5.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
