refactor: adopt multi-container setup

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ SMTP_PORT=587
 SMTP_USER=user@example.com
 SMTP_PASS=your_smtp_password
 INVITE_BASE_URL=http://web:3000/signup
+NEXT_PUBLIC_API_URL=http://api:3000
