--- a/.github/workflows/wf-codeql.yml
+++ b/.github/workflows/wf-codeql.yml
@@ -1,28 +1,34 @@
-name: "CodeQL"
-
-permissions:
-  contents: read
+name: CodeQL
 
 on:
   push:
     branches: [main]
   pull_request:
-    # The pull request events to analyze
     branches: [main]
+  schedule:
+    - cron: '0 0 * * 0'
+
+permissions:
+  contents: read
+  security-events: write
 
 jobs:
   analyze:
     name: Analyze
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
         with:
+          # This must be a YAML sequence under "languages:"
           languages: ["javascript", "typescript"]
+
+      - name: Autobuild
+        uses: github/codeql-action/autobuild@v3
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
-#forcing_PR
