--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,9 @@
     "next": "15.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "next-i18next": "^15.0.0"
+    "next-i18next": "^15.0.0",
+    "dotenv": "^16.4.1",
+    "react-hook-form": "^7.50.0"
   },
   "devDependencies": {
     "typescript": "^5.0.0",
