--- a/.env
+++ b/.env
@@ -6,3 +6,8 @@ SMTP_USER=user@example.com
 SMTP_PASS=your_smtp_password
 INVITE_BASE_URL=http://web:3000/signup
 NEXT_PUBLIC_API_URL=http://api:3000
+FIREBASE_SERVICE_ACCOUNT=
+APNS_KEY_FILE=./certs/apns_key.p8
+APNS_KEY_ID=
+APNS_TEAM_ID=
+APNS_BUNDLE_ID=eu.rescue-net
