--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -22,7 +22,9 @@
     "date-fns": "^3.6.0",
     "bcrypt": "^5.1.0",
     "class-validator": "^0.14.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "firebase-admin": "^11.10.1",
+    "apn": "^3.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.0",
