--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -19,7 +19,11 @@
     "react-native-gesture-handler": "^2.9.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.22.0",
-    "react-native-image-picker": "^5.3.1"
+    "react-native-image-picker": "^5.3.1",
+    "@react-native-firebase/app": "^18.6.0",
+    "@react-native-firebase/messaging": "^18.6.0",
+    "react-native-permissions": "^3.10.1",
+    "axios": "^1.6.8"
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
