--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -24,6 +24,7 @@
     "@react-native-firebase/app": "^22.2.0",
     "@react-native-firebase/messaging": "^18.6.0",
     "react-native-permissions": "^3.10.1",
+    "@react-native-community/geolocation": "^3.4.0",
     "axios": "^1.6.8"
   },
   "devDependencies": {
