--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,4 @@
-# Copy this file to .env and fill in the values
-DATABASE_URL=postgres://postgres:postgres@db:5432/rescue_net
-JWT_SECRET=your_jwt_secret_here
-SMTP_HOST=smtp.example.com
-SMTP_PORT=587
-SMTP_USER=user@example.com
-SMTP_PASS=your_smtp_password
-INVITE_BASE_URL=http://web:3000/signup
-NEXT_PUBLIC_API_URL=http://api:3000
-FIREBASE_SERVICE_ACCOUNT=
-APNS_KEY_FILE=./certs/apns_key.p8
-APNS_KEY_ID=
-APNS_TEAM_ID=
-APNS_BUNDLE_ID=eu.rescue-net
+DATABASE_URL=postgresql://postgres:postgres@db:5432/rescue_net
+JWT_SECRET=supersecret_jwt_key
+NEXT_PUBLIC_API_URL=http://localhost:3001
+NEXT_PUBLIC_VAPID_KEY=<YOUR_VAPID_PUBLIC_KEY>
