--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -24,7 +24,10 @@
     "class-validator": "^0.14.0",
     "uuid": "^11.1.0",
     "firebase-admin": "^11.10.1",
-    "apn": "^2.2.0"
+    "apn": "^2.2.0",
+    "@nestjs/websockets": "^11.0.0",
+    "@nestjs/platform-socket.io": "^11.0.0",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.0",
