--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,7 +13,8 @@
     "react-dom": "18.2.0",
     "next-i18next": "^15.0.0",
     "dotenv": "^16.4.1",
-    "react-hook-form": "^7.50.0"
+    "react-hook-form": "^7.50.0",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "typescript": "^5.0.0",
