Add Jest configurations and sample tests

--- a/turbo.json
+++ b/turbo.json
@@ -2,13 +2,23 @@
   "$schema": "https://turbo.build/schema.json",
   "pipeline": {
     "build": {
-      "dependsOn": ["^build"],
-      "outputs": ["dist/**", ".next/**", "ios/build/**", "android/app/build/**"]
+      "dependsOn": [
+        "^build"
+      ],
+      "outputs": [
+        "dist/**",
+        ".next/**",
+        "ios/build/**",
+        "android/app/build/**"
+      ]
     },
     "dev": {
       "cache": false
     },
     "lint": {
+      "outputs": []
+    },
+    "test": {
       "outputs": []
     }
   }
