--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,30 +5,36 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\""
+    "format": "prettier --write \"src/**/*.ts\"",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.0",
+    "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^11.0.0",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.0",
     "@nestjs/platform-express": "^11.0.0",
     "@prisma/client": "^5.14.0",
-    "nestjs-prisma": "^0.25.0",
-    "@nestjs/jwt": "^11.0.0",
-    "@nestjs/config": "^3.0.0",
-    "@nestjs/passport": "^11.0.0",
-    "passport-jwt": "^4.0.1",
-    "passport": "^0.6.0",
-    "nodemailer": "^6.9.11",
-    "date-fns": "^3.6.0",
+    "apn": "^2.2.0",
     "bcrypt": "^5.1.0",
     "class-validator": "^0.14.0",
-    "uuid": "^11.1.0",
+    "date-fns": "^3.6.0",
     "firebase-admin": "^11.10.1",
-    "apn": "^2.2.0"
+    "nestjs-prisma": "^0.25.0",
+    "nodemailer": "^6.9.11",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.0",
-    "typescript": "^5.0.0",
-    "prisma": "^5.14.0"
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0",
+    "prisma": "^5.14.0",
+    "reflect-metadata": "^0.2.2",
+    "ts-jest": "^29.3.4",
+    "typescript": "^5.0.0"
   }
 }
