--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -11,6 +11,9 @@
     "outDir": "dist",
     "baseUrl": "./",
     "incremental": true,
-    "types": ["node"]
+    "types": [
+      "node",
+      "jest"
+    ]
   }
 }
