--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "turbo run dev",
     "build": "turbo run build",
     "lint": "turbo run lint",
-    "test": "turbo run lint"
+    "test": "turbo run test"
   },
   "devDependencies": {
     "turbo": "^1.5.3"
