--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 DATABASE_URL=postgresql://postgres:postgres@db:5432/rescue_net
 JWT_SECRET=supersecret_jwt_key
 NEXT_PUBLIC_API_URL=http://localhost:3001
-NEXT_PUBLIC_VAPID_KEY=<YOUR_VAPID_PUBLIC_KEY>
+
+# Public VAPID key used for web push notifications
+NEXT_PUBLIC_VAPID_KEY=
